packages/taquito-michel-codec/test/contracts_015/ill_typed/stack_bottom_undropable.tz
parameter unit;
storage unit;
code {
       DROP 2;
     }
